objects/vlocity_cmt__ContractTerm__c.object
<CustomObject>
    <description>Contract terms are data attributes that represent negotiable items of a contract. Values for contract terms can be set for a contract version and displayed along with legal language in a contract document.</description>
    <fields>
        <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionId__c</fullName>
        <label>Contract Document</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contract Terms</relationshipLabel>
        <relationshipName>ContractTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TermSpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Terms</relationshipLabel>
        <relationshipName>ContractTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractTerms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>